# word-generator

./: README.md
backend2/: .gitignore  main.py  models.py  pyproject.toml  requirements.txt  wordGen.py
frontend/Word_Generator/: index.html  package-lock.json
frontend/Word_Generator/src/: App.tsx
frontend/Word_Generator/src/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/Word_Generator/src/components/dashboard/: PhraseCard.tsx  StatsCards.tsx  WordDisplay.tsx
frontend/Word_Generator/src/components/ui/: floating-sidebar.tsx
frontend/Word_Generator/src/lib/: api.ts
frontend/Word_Generator/src/pages/: Dashboard.tsx  History.tsx  Index.tsx  Quiz.tsx
